[dc-operator] Added app status